fix social icons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -653,8 +653,12 @@ body {
       width: 100%; }
       .social__icon {
         transform: scale(0.8); }
+        .social__icon--discord {
+          transform: scale(0.4); }
         .social__icon--email {
-          transform: scale(1.3); } }
+          transform: scale(1.3); }
+        .social__icon--github {
+          transform: scale(0.3); } }
 
 a svg:hover #github,
 a svg:hover .st0 {
